--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
 	},
 	"devDependencies": {
 		"@img/sharp-linux-x64": "^0.33.5",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/cookie": "^0.6.0",
 		"@types/html-minifier": "^4.0.5",
 		"@types/matter-js": "^0.19.7",
 		"@types/turndown": "^5.0.5",
-		"@typescript-eslint/eslint-plugin": "^8.10.0",
-		"@typescript-eslint/parser": "^8.10.0",
+		"@typescript-eslint/eslint-plugin": "^8.11.0",
+		"@typescript-eslint/parser": "^8.11.0",
 		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
 		"mdsvex": "patch:mdsvex@npm%3A0.12.3#~/.yarn/patches/mdsvex-npm-0.12.3-11596b7ddc.patch",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"sharp": "^0.33.5",
-		"svelte": "4.2.19",
+		"svelte": "^5.1.0",
 		"svelte-check": "^4.0.5",
 		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.0",
@@ -38,16 +38,16 @@
 		"@lukeed/uuid": "^2.0.1",
 		"@sveltejs/adapter-node": "^5.2.8",
 		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/kit": "^2.7.2",
 		"@types/js-yaml": "^4.0.9",
 		"cbor-x": "^1.6.0",
 		"cookie": "^1.0.1",
 		"html-minifier": "^4.0.0",
 		"matter-js": "^0.20.0",
 		"postinstall-postinstall": "^2.1.0",
-		"svelte-body": "^1.4.0",
+		"svelte-body": "^2.0.0",
 		"turndown": "^7.2.0",
-		"vite": "5.4.9"
+		"vite": "5.4.10"
 	},
 	"engines": {
 		"node": ">=16"
