--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
 	},
 	"devDependencies": {
 		"@img/sharp-linux-x64": "^0.33.5",
-		"@sveltejs/vite-plugin-svelte": "^4.0.2",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/cookie": "^1.0.0",
 		"@types/html-minifier": "^4.0.5",
 		"@types/matter-js": "^0.19.8",
 		"@types/turndown": "^5.0.5",
-		"@typescript-eslint/eslint-plugin": "^8.17.0",
-		"@typescript-eslint/parser": "^8.17.0",
-		"eslint": "^9.16.0",
-		"eslint-config-prettier": "^9.1.0",
-		"mdsvex": "patch:mdsvex@npm%3A0.12.3#~/.yarn/patches/mdsvex-npm-0.12.3-11596b7ddc.patch",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.2",
+		"@typescript-eslint/eslint-plugin": "^8.26.1",
+		"@typescript-eslint/parser": "^8.26.1",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.1.1",
+		"mdsvex": "^0.12.3",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
 		"sharp": "^0.33.5",
-		"svelte": "^5.8.1",
-		"svelte-check": "^4.1.1",
+		"svelte": "^5.23.0",
+		"svelte-check": "^4.1.5",
 		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
-		"typescript": "^5.7.2"
+		"typescript": "^5.8.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.1",
-		"@sveltejs/adapter-node": "^5.2.9",
-		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.9.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.19.1",
 		"@types/js-yaml": "^4.0.9",
 		"cbor-x": "^1.6.0",
 		"cookie": "^1.0.2",
@@ -47,7 +47,7 @@
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^2.0.0",
 		"turndown": "^7.2.0",
-		"vite": "5.4.11"
+		"vite": "6.2.2"
 	},
 	"engines": {
 		"node": ">=16"
