--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@img/sharp-linux-x64": "^0.34.2",
-		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@img/sharp-linux-x64": "^0.34.3",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@types/cookie": "^1.0.0",
 		"@types/html-minifier": "^4.0.5",
 		"@types/matter-js": "^0.19.8",
 		"@types/turndown": "^5.0.5",
-		"@typescript-eslint/eslint-plugin": "^8.33.1",
-		"@typescript-eslint/parser": "^8.33.1",
-		"eslint": "^9.28.0",
-		"eslint-config-prettier": "^10.1.5",
+		"@typescript-eslint/eslint-plugin": "^8.38.0",
+		"@typescript-eslint/parser": "^8.38.0",
+		"eslint": "^9.32.0",
+		"eslint-config-prettier": "^10.1.8",
 		"mdsvex": "patch:mdsvex@npm%3A0.12.3#~/.yarn/patches/mdsvex-npm-0.12.3-11596b7ddc.patch",
-		"prettier": "^3.5.3",
+		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
-		"sharp": "^0.34.2",
-		"svelte": "^5.33.18",
-		"svelte-check": "^4.2.1",
+		"rehype-external-links": "^3.0.0",
+		"sharp": "^0.34.3",
+		"svelte": "^5.37.1",
+		"svelte-check": "^4.3.0",
 		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3"
@@ -36,18 +37,19 @@
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.1",
-		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/adapter-node": "^5.2.13",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.21.2",
+		"@sveltejs/kit": "^2.26.1",
 		"@types/js-yaml": "^4.0.9",
 		"cbor-x": "^1.6.0",
 		"cookie": "^1.0.2",
 		"html-minifier": "^4.0.0",
+		"image-size": "^2.0.2",
 		"matter-js": "^0.20.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^2.0.0",
 		"turndown": "^7.2.0",
-		"vite": "6.3.5"
+		"vite": "7.0.6"
 	},
 	"engines": {
 		"node": ">=16"
