--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
 			"$lib/*": ["src/lib/*"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"],
+	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/**/*.svx"],
 	"extends": "./.svelte-kit/tsconfig.json"
 }
