--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@img/sharp-linux-x64": "^0.34.3",
-		"@sveltejs/vite-plugin-svelte": "^6.1.3",
+		"@img/sharp-linux-x64": "^0.34.5",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@types/cookie": "^1.0.0",
-		"@types/html-minifier": "^4.0.5",
-		"@types/matter-js": "^0.20.0",
-		"@types/turndown": "^5.0.5",
-		"@typescript-eslint/eslint-plugin": "^8.41.0",
-		"@typescript-eslint/parser": "^8.41.0",
-		"eslint": "^9.34.0",
+		"@types/html-minifier": "^4.0.6",
+		"@types/matter-js": "^0.20.2",
+		"@types/turndown": "^5.0.6",
+		"@typescript-eslint/eslint-plugin": "^8.47.0",
+		"@typescript-eslint/parser": "^8.47.0",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"mdsvex": "patch:mdsvex@npm%3A0.12.3#~/.yarn/patches/mdsvex-npm-0.12.3-11596b7ddc.patch",
+		"mdsvex": "^0.12.6",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"rehype-external-links": "^3.0.0",
-		"sharp": "^0.34.3",
-		"svelte": "^5.38.6",
-		"svelte-check": "^4.3.1",
+		"sharp": "^0.34.5",
+		"svelte": "^5.43.12",
+		"svelte-check": "^4.3.4",
 		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
-		"typescript": "^5.9.2"
+		"typescript": "^5.9.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.1",
-		"@sveltejs/adapter-node": "^5.3.1",
-		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.37.0",
+		"@sveltejs/adapter-node": "^5.4.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.48.5",
 		"@types/js-yaml": "^4.0.9",
 		"cbor-x": "^1.6.0",
 		"cookie": "^1.0.2",
@@ -48,7 +48,7 @@
 		"matter-js": "^0.20.0",
 		"postinstall-postinstall": "^2.1.0",
 		"svelte-body": "^2.0.0",
-		"turndown": "^7.2.1",
+		"turndown": "^7.2.2",
 		"vite": "7.1.3"
 	},
 	"engines": {
