--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "Dev",
 			"type": "shell",
-			"command": "yarn dev",
+			"command": "bun dev",
 			"group": "none",
 			"presentation": {
 				"reveal": "always",
